Fix article button issue on mobile devices.

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -838,7 +838,6 @@ a.stack-overflow-link > img {
     div.next-previous {
         display: block;
         margin: auto;
-        float: none;
     }
 
 	.tweet .tweet-body {
